force-app/main/default/objects/Opportunity/fields/Days_Since_Last_Interaction__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Interaction__c</fullName>
    <formula>MIN(
    IF(ISBLANK(Days_Since_Last_Call__c), 99999, Days_Since_Last_Call__c),
    IF(ISBLANK(Days_Since_Last_Meeting__c), 99999, Days_Since_Last_Meeting__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Interaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>