force-app/main/default/objects/Opportunity/fields/Last_NBA_Served_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_NBA_Served_Date__c</fullName>
    <description>Timestamp of the most recent NBA_Queue__c record creation for this Opportunity. Used for starvation monitoring.</description>
    <label>Last NBA Served Date</label>
    <type>DateTime</type>
</CustomField>