force-app/main/default/objects/Opportunity/fields/NBA_Action_Count__c.field-meta.xml
<CustomField>
    <fullName>NBA_Action_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total count of NBA_Queue__c records created for this Opportunity. Used for starvation monitoring and action metrics.</description>
    <label>NBA Action Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>